<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_bg"
    tools:context=".Start_Act_2017004">

    <TextView
        android:id="@+id/score_count"
        android:layout_width="110dp"
        android:layout_height="33dp"
        android:text="@string/Score1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quiz_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gt_color" />

    <TextView
        android:id="@+id/question"
        android:layout_width="143dp"
        android:layout_height="31dp"
        android:text="@string/Question"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/quiz_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/score_count"
        app:layout_constraintTop_toBottomOf="@+id/gt_color"
        app:layout_constraintVertical_bias="0.44" />

    <ImageView
        android:id="@+id/quiz_img"
        android:layout_width="334dp"
        android:layout_height="226dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/descIMG_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gt_color" />

    <RadioGroup
        android:id="@+id/optgroup"
        android:layout_width="231dp"
        android:layout_height="243dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/opt_bg"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/opt1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/O1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/opt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/O2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/opt3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/O3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/opt4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:text="@string/O4"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/gt_color"
        android:layout_width="315dp"
        android:layout_height="55dp"
        android:shadowColor="@color/btBlue"
        android:shadowDx="3.0"
        android:shadowDy="2.0"
        android:shadowRadius="10.0"
        android:text="@string/GTC"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:fontFamily="sans-serif-smallcaps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_img" />

    <Button
        android:id="@+id/next"
        android:layout_width="222dp"
        android:layout_height="55dp"
        android:background="@drawable/rounded_button"
        android:text="@string/next"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optgroup"
        app:layout_constraintVertical_bias="0.050000012" />

</androidx.constraintlayout.widget.ConstraintLayout>