<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Score_Act_2017004"
    android:background="@drawable/score_bg">

    <TextView
        android:id="@+id/date"
        android:layout_width="94dp"
        android:layout_height="47dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/DATE"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/time"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:text="@string/TIME"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/score"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/score"
        android:layout_width="110dp"
        android:layout_height="47dp"
        android:text="@string/Score2"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002" />

    <Button
        android:id="@+id/go_back"
        android:layout_width="161dp"
        android:layout_height="63dp"
        android:background="@drawable/rounded_button"
        android:text="@string/back"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <TextView
        android:id="@+id/dtv1"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/O1"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ttv1"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dtv2"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/O2"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ttv2"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtv1"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/dtv3"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/O3"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ttv3"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtv2"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/dtv4"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/O4"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ttv4"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtv3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dtv5"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/DATE"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ttv5"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dtv4"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/ttv1"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:text="@string/DATE"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/ttv2"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/DATE"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stv2"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttv1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ttv3"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/DATE"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stv3"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttv2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ttv4"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/DATE"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stv4"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttv3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ttv5"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/DATE"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stv5"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttv4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stv1"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:paddingStart="40sp"
        android:paddingLeft="40sp"
        android:paddingEnd="10sp"
        android:paddingRight="10sp"
        android:text="@string/DATE"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/ttv1"
        app:layout_constraintTop_toBottomOf="@+id/score"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stv2"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:text="@string/DATE"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:paddingLeft="40sp"
        android:paddingRight="10sp"
        android:paddingStart="40sp"
        android:paddingEnd="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ttv2"
        app:layout_constraintTop_toBottomOf="@+id/stv1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stv3"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/DATE"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:paddingLeft="40sp"
        android:paddingRight="10sp"
        android:paddingStart="40sp"
        android:paddingEnd="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ttv3"
        app:layout_constraintTop_toBottomOf="@+id/stv2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stv4"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:text="@string/DATE"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:paddingLeft="40sp"
        android:paddingRight="10sp"
        android:paddingStart="40sp"
        android:paddingEnd="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ttv4"
        app:layout_constraintTop_toBottomOf="@+id/stv3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stv5"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/DATE"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:paddingLeft="40sp"
        android:paddingRight="10sp"
        android:paddingStart="40sp"
        android:paddingEnd="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ttv5"
        app:layout_constraintTop_toBottomOf="@+id/stv4"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>